# agent_rag_env

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  orchestrator.py
backend/app/agents/prompts/: __init__.py  system.py
backend/app/agents/tools/: __init__.py  base.py  file_reader.py  rag.py  registry.py  web_search.py
backend/app/api/: __init__.py  dependencies.py  middleware.py
backend/app/api/routes/: __init__.py  chat.py  documents.py  health.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
backend/app/db/: __init__.py  init_db.py  postgres.py  redis.py
backend/app/models/: __init__.py
backend/app/models/domain/: __init__.py  base.py  chat.py  chunk.py  document.py  message.py
backend/app/models/schemas/: __init__.py  agent.py  chat.py  document.py
backend/app/repositories/: __init__.py  base.py  chat.py  chunk.py  document.py
backend/app/services/: __init__.py
backend/app/services/chat/: __init__.py  history.py  service.py
backend/app/services/document/: __init__.py  chunker.py  extractor.py  processor.py
backend/app/services/embedding/: __init__.py  service.py
backend/app/services/llm/: __init__.py  client.py  text.py  vision.py
backend/app/services/search/: __init__.py  vector.py  web.py
docker/postgres/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.scss  App.tsx
frontend/src/components/Chat/: index.ts
frontend/src/components/Chat/ChatContainer/: ChatContainer.scss  ChatContainer.tsx
frontend/src/components/Chat/CodeBlock/: CodeBlock.scss  CodeBlock.tsx
frontend/src/components/Chat/InputArea/: InputArea.scss  InputArea.tsx
frontend/src/components/Chat/MessageBubble/: MessageBubble.scss  MessageBubble.tsx
frontend/src/components/Documents/: index.ts
frontend/src/components/common/: index.ts
frontend/src/constants/: api.ts  ui.ts
frontend/src/hooks/: index.ts  useChat.ts  useDocuments.ts  useTheme.ts
frontend/src/services/: api.ts
frontend/src/styles/: _mixins.scss  _variables.scss  main.scss
frontend/src/types/: index.ts
(+18 files in other folders)
